[package]
name = "quicklam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
lalrpop-util = { version = "0.19.6", features = ["lexer"] }
regex = "1.5.4"
rustyline = "9.0.0"
ariadne = "0.1.3"
