[package]
name = "quicklam"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "reduction"
harness = false

[build-dependencies]
lalrpop = "0.19.6"

[dev-dependencies]
criterion = "0.3"

[dependencies]
lalrpop-util = { version = "0.19.6", features = ["lexer"] }
regex = "1.5.4"
rustyline = "9.0.0"
ariadne = "0.1.3"
